updated to Neoforge 21.0.52, general code cleanup